ansible/rke2/certificates/ingress-tls-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
  name: ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - <DNS-NAME>
      secretName: hello-world-tls # < cert-manager will store the created certificate in this secret.
  rules:
  - host: <DNS-NAME>
    http:
      paths:
      - backend:
          service:
            name: hello-world
            port:
              number: 80
        path: /
        pathType: Prefix
